# versasim

./: .gitignore  README.md  main.py  pyproject.toml
tests/: test_candidate.py  test_candidate_selection.py  test_contest.py  test_edf.py  test_election.py  test_gpunit.py  test_json.py  test_office.py  test_party.py  test_report.py
versasim/: AirTable.py  edf.py
